doc: problem definition + bibliography

--- a/articles/er-evaluation-models/er-additional-references.bib
+++ b/articles/er-evaluation-models/er-additional-references.bib
@@ -1,3 +1,19 @@
+@book{bishop2006pattern,
+  title={Pattern recognition and machine learning},
+  author={Bishop, Christopher M and Nasrabadi, Nasser M},
+  volume={4},
+  number={4},
+  year={2006},
+  publisher={Springer}
+}
+@incollection{tal2013,
+  title={A practical guide to entity resolution with OYSTER},
+  author={Talburt, John R and Zhou, Yinle},
+  booktitle={Handbook of Data Quality: Research and Practice},
+  pages={235--270},
+  year={2013},
+  publisher={Springer}
+}
 @inproceedings{Qia17,
 author = {Qian, Kun and Popa, Lucian and Prithviraj, Sen },
 title = {Active learning for large-scale entity resolution},
@@ -9,14 +25,6 @@ author = {Grisham, Ralph and Sundheim, Beth M},
 address = {Dusseldorf},
 title = {Message understanding conference-6: A brief history.},
 year = {1996}
-}
-@article{Fel69,
-author = {Fellegi, Ivan P and Sunter, Alan B},
-title = {A Theory for Record Linkage},
-journal = {Journal of the American Statistical Association},
-year = {1969},
-volume = {64},
-pages = {1183-1210}
 }
 @book{Coo66,
 author = {Cook, Desmond Lawrence},
@@ -62,17 +70,6 @@ author = {Menestrina, David and Whang, Steven Euijong and Garcia-Molina, H. },
 title = {Evaluating entity resolution results},
 year = {2010}
 }
-@inproceedings{Kop101,
-author = {Kopcke, Hanna and Thor, Andreas and Rahm, Erhard },
-address = {Singapore},
-title = {Comparative evaluation of entity resolution approaches with fever},
-year = {2009}
-}
-@article{Christen2002,
-author = {Christen, P. and Churches, T. },
-title = {Febrl - Freely extensible biomedical record linkage},
-year = {2002}
-}
 @article{Weis2006,
 author = {Weis, Melanie and Naumann, Felix and Brosy, Franziska },
 title = {A Duplicate Detection Benchmark for XML ( and Relational ) Data},
@@ -102,12 +99,6 @@ pages = {1988–1998}
 author = {Xiao, Chuan and Wang, Wei and Lin, Xuemin and Yu, J. },
 title = {Efficient similarity joins for near duplicate detection},
 year = {2008}
-}
-@article{Pap19,
-author = {Papadakis, George and Skoutas, Dimitrios and Thanos, Emmanouil and Palpanas, Themis },
-title = {A survey of blocking and filtering techniques for entity resolution},
-journal = {arXiv preprint arXiv:1905.06167},
-year = {2019}
 }
 @article{Mai12,
 author = {Maidasani, Hitesh and Namata, Galileo and Huang, Bert and Getoor, Lise },
